[gd_scene load_steps=7 format=2]

[ext_resource path="res://ASSETS/WORLD_ASSETS/Firefly Buzz.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Firefly.gd" type="Script" id=2]
[ext_resource path="res://ASSETS/WORLD_ASSETS/Light_Orb.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1, 1 )

[sub_resource type="Animation" id=2]
resource_name = "Buzz"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("FireflyBuzz:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 0 ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("FireflyBuzz:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[node name="Firefly" type="KinematicBody2D"]
collision_layer = 64
collision_mask = 2
script = ExtResource( 2 )

[node name="FireflyBuzz" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 6
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Buzz = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]

[node name="Timer2" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="Timer3" type="Timer" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( -2, -2 )
scale = Vector2( 0.265443, 0.0917452 )
enabled = true

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 2, -1.5 )
scale = Vector2( 0.367188, 0.339844 )
texture = ExtResource( 3 )
texture_scale = 0.5
color = Color( 0.992157, 1, 0, 1 )
energy = 0.7

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="timeout" from="Timer3" to="." method="_on_Timer3_timeout"]
